--- a/solutions/statistics/list.tex
+++ b/solutions/statistics/list.tex
@@ -1,4 +1,6 @@
 \section{Математическая статистика}
+\input{solutions/statistics/common}
+\newpage
 \input{solutions/statistics/37}
 \newpage
 \input{solutions/statistics/38}
