--- a/solutions/analysis/6.tex
+++ b/solutions/analysis/6.tex
@@ -37,11 +37,11 @@
 
 \Theor{Достаточное условие локального экстремума}
 
-Пусть $f \in U_\delta (x_0)$ и диф. в $\mathring{U} (x_0)$.
+Пусть $f$ непрерывна в $U_\delta (x_0)$ и дифференцируема в $\mathring{U} (x_0)$.
 
 Тогда если $f'$ меняет знак при переходе через $x_0$, то $x_0$ - точка локального экстремума. 
 
-(При этом если знак меняется с - на +, то это локальный минимум, а если с + на -, то локальный максимум)
+(При этом если знак меняется с $-$ на $+$, то это локальный минимум, а если с $+$ на $-$, то локальный максимум)
 
 \Proof
 
@@ -60,7 +60,7 @@
 Тогда 
 
 \begin{enumerate}
-    \item если $n$ нечетно, то $x_0$ не является точной экстремума;
+    \item если $n$ нечетно, то $x_0$ не является точкой экстремума;
     \item Если $n$ четно, то $x_0$ -- строгий локальный экстремум (минимум, если $f^{(n)}(x_0) > 0$; максимум, если $f^{(n)}(x_0) < 0$).
 \end{enumerate}
 
@@ -70,7 +70,7 @@
 
 \begin{gather*}
     f(x) = f(x_0) + \sum _{k=1}^{n-1} \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{f^{(n)}(x_0)}{n!} (x-x_0)^n + o((x-x_0)^n) \\
-    \frac{f(x)-f(x_0)}{x-x_0} = \frac{f^{(n)}(x_0)}{n!} + \eps(x), \eps(x)\rightarrow 0, x\rightarrow x_0
+    \frac{f(x)-f(x_0)}{(x-x_0)^n} = \frac{f^{(n)}(x_0)}{n!} + \eps(x), \eps(x)\rightarrow 0, \;x\rightarrow x_0
 \end{gather*}
 
 Если $n$ четно и $f^{(n)}(x_0) > 0$, то для достаточно малой окрестности $x_0$ правая часть будет положительна. А $(x-x_0)^n$ всегда положительно в проколотой окрестности при четном n. А значит $f(x) - f(x_0) > 0$ для любого $x$ в достаточно малой окрестности.
@@ -119,19 +119,19 @@
 
 \Note Выпуклые вверх функции также называют вогнутыми.
 
-\Theor{}
+\Th
 
 Пусть $f: (a, b) \rightarrow \R$ дважды дифференцируема.
 
 Тогда 
 \begin{enumerate}
-    \item $f$ выпукла вниз $\iff f''(x) \geq 0 \,\forall x\in(a, b)$.
-    \item $f$ выпукла вверх $\iff f''(x) \leq 0 \,\forall x\in(a,b)$. 
+    \item $f$ выпукла вниз $\iff f''(x) \geq 0 \;\forall x\in(a, b)$.
+    \item $f$ выпукла вверх $\iff f''(x) \leq 0 \;\forall x\in(a,b)$. 
 \end{enumerate}
 
 \Proof
 
-Пусть $f$ выпукла вниз. Фиксируем $x_0 \in (a, b)$. Выберем $u \in (0, \min{x_0 - a, b - x_0})$.
+Пусть $f$ выпукла вниз. Фиксируем $x_0 \in (a, b)$. Выберем $u \in (0, \min\{x_0 - a, b - x_0\})$.
 
 $x_1 = x_0 - u; x_2 = x_0 + u$. $x_0 = \frac{x_1 + x_2}{2}$.
 
